--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run:  touch artifact.txt
-      shell: bash
+        # shell: bash
       - uses: actions/upload-artifact@v1
       with:
         name: githubactions-upload-artifact
