--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           name: githubactions-upload-artifact
           path: UP
-      - uses: hogehoge
+      # - uses: hogehoge
