--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -10,8 +10,8 @@ jobs:
         run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: build
         run: cmake --build build
-      # - name: test
-        # run: cd build && test
+      - name: test
+        run: test
       - uses: actions/upload-artifact@v1
         with:
           name: buildFile
