--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -11,7 +11,7 @@ jobs:
       - name: build
         run: cmake --build build
       - name: test
-        run: test
+        run: ./test
       - uses: actions/upload-artifact@v1
         with:
           name: buildFile
