--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -10,6 +10,8 @@ jobs:
         run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: build
         run: cmake --build build
+      - name: pwd
+        run: pwd
       - name: test
         run: ./test
       - uses: actions/upload-artifact@v1
