--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,8 @@ file(GLOB srcFiles
 
 add_executable(test ${srcFiles})
 set_property(TARGET test PROPERTY CXX_STANDARD 20)
+
+install(TARGETS main)
+
+enable_testing()
+add_test(NAME main COMMAND main)
