--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.1)
-project(test CXX)
+project(testProj CXX)
 
 file(GLOB srcFiles
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
 )
 
-add_executable(test ${srcFiles})
-set_property(TARGET test PROPERTY CXX_STANDARD 20)
+add_executable(testProj ${srcFiles})
+set_property(TARGET testProj PROPERTY CXX_STANDARD 20)
 
-install(TARGETS test)
+install(TARGETS testProj)
 
 enable_testing()
-add_test(NAME test COMMAND test)
+add_test(NAME testProj COMMAND testProj)
