--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -10,9 +10,7 @@ jobs:
         run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: build
         run: cmake --build build
-      - name: pwd
-        run: pwd
-      - name: test
+      - name: test-run
         run: cd build && ./testProj
       - uses: actions/upload-artifact@v1
         with:
