--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -3,8 +3,8 @@ on: [push]
 
 jobs:
   build-ubuntu:
-    name: ${matrix.os}
-    runs-on: ${matrix.os}
+    name: ${{matrix.os}}
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
