--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest, ubuntu-latest]
-        ext: [.exe, '']
+        ext: ['.exe', '']
 
     steps:
       - uses: actions/checkout@v2
