--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -18,7 +18,7 @@ jobs:
         # run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: build
         run: cmake --build build
-      # - name: test-run
+      - name: test-run
         run: cd build && ./testProj${{matrix.ext}}
       - uses: actions/upload-artifact@v1
         with:
