--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -23,8 +23,8 @@ jobs:
       - name: build
         run: cmake --build build
       - name: test-run
-        run: cd build && ./testProj${{matrix.ext}}
+        run: cd build && ./testProj${{runner.ext}}
       - uses: actions/upload-artifact@v1
         with:
-          name: buildFile_${{matrix.os}}
+          name: buildFile_${{runner.os}}
           path: build
