--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        config:
         - {
           os: windows-latest, ext: '.exe'
         }
