--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -23,8 +23,8 @@ jobs:
         # run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: build
         run: cmake --build build
-      # - name: test-run
-        # run: cd build && ./testProj${{matrix.config.ext}}
+      - name: test-run
+        run: cd build && ./testProj${{matrix.config.ext}}
       - uses: actions/upload-artifact@v1
         with:
           name: buildFile_${{runner.os}}
