--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -23,6 +23,8 @@ jobs:
         # run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: build
         run: cmake --build build
+      - name: ls check
+        run: ls build/
       - name: test-run
         run: cd build && ./testProj${{matrix.config.ext}}
       - uses: actions/upload-artifact@v1
