--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -3,8 +3,7 @@ on: [push]
 
 jobs:
   build-ubuntu:
-    env:
-      projectName: testProj
+    projectName: testProj
     name: ${{matrix.config.os}}
     runs-on: ${{matrix.config.os}}
     strategy:
@@ -12,7 +11,7 @@ jobs:
       matrix:
         config:
         - {
-          os: windows-latest, path: 'build/Debug/${{env.projectName}}.exe'
+          os: windows-latest, path: 'build/Debug/${{projectName}}.exe'
         }
         - {
           os: ubuntu-latest, path: 'build/${{env.projectName}}'
