--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
 project(testProj CXX)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/stb/)
+
 file(GLOB srcFiles
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
