--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -19,7 +19,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: update submodule
-        run: git submodule update --init
+        # run: git submodule update --init
+        run: actions/checkout@v1
+        with:
+          submodule:  ture
       - name: configure
         run: mkdir build && cd build && cmake ..
         # run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
