--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: update submodule
         # run: git submodule update --init
-        run: actions/checkout@v1
+        uses: actions/checkout@v1
         with:
           submodule:  ture
       - name: configure
