--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ file(GLOB srcFiles
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/stb/stb_image.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/stb/stb_image_write.h
 )
 
 add_executable(testProj ${srcFiles})
