--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -28,6 +28,8 @@ jobs:
         # run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
       - name: ls check
         run: ls
+      - name: ls stb check
+        run: ls stb/
       - uses: actions/upload-artifact@v1
         with:
           name: buildFile_${{runner.os}}
