--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -18,8 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: update submodule
-        run: git submodule update --init
+        with:
+          submodules:  ture
       - name: configure
         run: mkdir build && cd build && cmake ..
         # run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
