--- a/.github/workflows/cpp-build.yml
+++ b/.github/workflows/cpp-build.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'ture'
-          token: ${{secrets.SECRET_TOKEN}}
+          # token: ${{secrets.SECRET_TOKEN}}
       - name: Update Submodules
         run: git submodule update --init
       - name: configure
